add build directory to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,10 @@
-
 .idea/.name
-
 .idea/libpagure.iml
-
 .idea/misc.xml
-
 .idea/modules.xml
-
 .idea/vcs.xml
-
 .idea/workspace.xml
-
 MANIFEST
-
 dist/libpagure-v0.11.tar.gz
-
 *.gz
+build
