--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include LICENSE.txt README.md
+include LICENSE.txt README.md CHANGELOG.rst
 include requirements.txt test-requirements.txt
 include tox.ini
